--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -2,7 +2,7 @@ name: Run Python Script Daily at 11 AM
 
 on:
   schedule:
-    - cron: '0 6 * * 1-5' # Every weekday (Mon-Fri) at 11:00 UTC
+    - cron: '40 6 * * *' # Every weekday (Mon-Fri) at 11:00 UTC
 
 jobs:
   run-script:
